deploy/apps/api-core/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-core
  labels:
    app: api-core
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: api-core
